[package]
name = "bibtex-parser"
version = "0.1.0"
authors = ["Blazej Sewera <code@sewera.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4.24"
num-traits = "0.2.15"
clap = { version = "4.3.19", features = ["derive"] }
serde = { version = "1.0.179", features = ["derive"] }
serde_json = "1.0.104"
